--- a/css/destino.css
+++ b/css/destino.css
@@ -333,6 +333,7 @@
         background-color: yellow;
         border-radius: 0.5em;
         padding: 0.5em 0.5em;
+        margin-bottom: 1.5rem;
         color: black;
         cursor: pointer;
         text-align: center;
