--- a/sass/parciales/_socialProof.scss
+++ b/sass/parciales/_socialProof.scss
@@ -47,6 +47,7 @@
                 color: white;
                 font-size: 1.5rem;
                 font-weight: 500;
+                margin-top: 1.5rem;
                 span{
                     text-transform: uppercase;
                     background-color: $color-fuente1;
