--- a/sass/parciales/_socialProof.scss
+++ b/sass/parciales/_socialProof.scss
@@ -48,13 +48,18 @@
                 font-size: 1.5rem;
                 font-weight: 500;
                 margin-top: 1.5rem;
-                span{
+                .apellido{
                     text-transform: uppercase;
                     background-color: $color-fuente1;
                     font-weight: bold;
                     color: black;
                     border-radius: 0.5rem;
                     padding: 0.2rem 0.2rem;
+                }
+                .prof{
+                    font-size: 1.2rem;
+                    color: grey;
+                    font-weight: bold;
                 }
             }
             .parrafo{
@@ -75,7 +80,8 @@
                 color:white;
                 font-size: 1.2rem;
             }
-            .btn{
+            .enlace{
+                text-decoration: none;
                 font-size: 1.2em;
                 font-weight: bold;
                 background-color: yellow;
@@ -89,7 +95,7 @@
                 border: none;
                 transition: transform 0.3s ease-in;
             }
-            .btn:hover{
+            .enlace:hover{
                 transform: scale(1.1);
                 box-shadow: 0 0 5px yellow,
                 0 0 20px yellow, 
@@ -124,11 +130,11 @@
     }
 }
 
-@media (max-width: 425px){
+@media (max-width: 430px){
     .main__socialProof{
         height: auto;
         h3{
-            font-size: 1.5rem;
+            font-size: 1.47rem;
         }
         .socialProof__cards{
             height: auto;
