--- a/css/destino.css
+++ b/css/destino.css
@@ -123,11 +123,11 @@
     .header__promesa p {
       justify-content: center; } }
 
-@media (max-width: 425px) {
+@media (max-width: 430px) {
   .contenedor__header {
     display: flex;
     flex-direction: column;
-    height: 20rem;
+    height: auto;
     justify-content: space-around; }
     .contenedor__header .header__timer {
       order: 2; }
@@ -207,6 +207,23 @@
     .main__presentacion .vsl iframe {
       width: 700px;
       height: 395px; } }
+
+@media (max-width: 430px) {
+  .main__presentacion {
+    max-width: 100vw;
+    padding: 0.3rem; }
+    .main__presentacion p {
+      font-size: 1rem; }
+    .main__presentacion .redes {
+      width: 15em; }
+      .main__presentacion .redes .redes__item {
+        justify-content: center;
+        align-items: center;
+        width: 3rem;
+        height: 3rem; }
+    .main__presentacion .vsl iframe {
+      width: 340px;
+      height: 190px; } }
 
 @media (max-width: 425px) {
   .main__presentacion {
@@ -305,13 +322,17 @@
         font-size: 1.5rem;
         font-weight: 500;
         margin-top: 1.5rem; }
-        .main__socialProof .socialProof__cards .card h2 span {
+        .main__socialProof .socialProof__cards .card h2 .apellido {
           text-transform: uppercase;
           background-color: #e3eeff;
           font-weight: bold;
           color: black;
           border-radius: 0.5rem;
           padding: 0.2rem 0.2rem; }
+        .main__socialProof .socialProof__cards .card h2 .prof {
+          font-size: 1.2rem;
+          color: grey;
+          font-weight: bold; }
       .main__socialProof .socialProof__cards .card .parrafo {
         height: auto;
         margin: 2rem;
@@ -328,7 +349,8 @@
         background-color: #204473;
         color: white;
         font-size: 1.2rem; }
-      .main__socialProof .socialProof__cards .card .btn {
+      .main__socialProof .socialProof__cards .card .enlace {
+        text-decoration: none;
         font-size: 1.2em;
         font-weight: bold;
         background-color: yellow;
@@ -341,7 +363,7 @@
         text-transform: uppercase;
         border: none;
         transition: transform 0.3s ease-in; }
-      .main__socialProof .socialProof__cards .card .btn:hover {
+      .main__socialProof .socialProof__cards .card .enlace:hover {
         transform: scale(1.1);
         box-shadow: 0 0 5px yellow, 0 0 20px yellow,  0 0 40px yellow,  0 0 20px yellow; }
 
@@ -364,11 +386,11 @@
         .main__socialProof .socialProof__cards .card .more {
           display: none; } }
 
-@media (max-width: 425px) {
+@media (max-width: 430px) {
   .main__socialProof {
     height: auto; }
     .main__socialProof h3 {
-      font-size: 1.5rem; }
+      font-size: 1.47rem; }
     .main__socialProof .socialProof__cards {
       height: auto; }
       .main__socialProof .socialProof__cards .card {
