--- a/sass/parciales/_mainPresentacion.scss
+++ b/sass/parciales/_mainPresentacion.scss
@@ -66,7 +66,7 @@
     .main__presentacion{
         max-width: 100vw;
         .vsl{
-            iframe{
+            .video{
                 width: 700px;
                 height: 395px;
             }
@@ -91,7 +91,7 @@
             }
         }
         .vsl{
-            iframe{
+            .video{
                 width: 340px;
                 height: 190px;
             }
@@ -116,7 +116,7 @@
             }
         }
         .vsl{
-            iframe{
+            .video{
                 width: 354px;
                 height: 200px;
             }
