--- a/sass/parciales/_mainPresentacion.scss
+++ b/sass/parciales/_mainPresentacion.scss
@@ -1,6 +1,6 @@
 .main__presentacion{
     @include conteiner-flex-column;
-    width: 70rem;
+    width: 100vw;
     height: auto;
     overflow: hidden;
     align-items: center;
@@ -55,22 +55,20 @@
     }
 
     .vsl{
-        padding: 5rem;
+        margin: 5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         .video {
             box-shadow: 0 0 65px 10px blue;
-            height: auto;
+            width: 100vw; /* Ancho predeterminado */
+            height: auto; /* Alto predeterminado */
         }
     }
 
 @media (max-width: 768px){
     .main__presentacion{
         max-width: 100vw;
-        .vsl{
-            .video{
-                width: 700px;
-                height: 395px;
-            }
-        }
     }
 }
 
@@ -90,22 +88,13 @@
                 height: 3rem;
             }
         }
-        .vsl{
-            .video{
-                width: 340px;
-                height: 190px;
-            }
-        }
     }
 }
 
 @media (max-width: 425px){
     .main__presentacion{
-        max-width: 100vw;
-        padding: 0.3rem;
-        p{
-            font-size: 1rem;
-        }
+        width: 100vw;
+        
         .redes{
             width: 15em;
             .redes__item{
@@ -116,11 +105,12 @@
             }
         }
         .vsl{
+            width: 100vw;
             .video{
-                width: 354px;
-                height: 200px;
+                width: 100;
             }
         }
+    
     }
 }
 }
