--- a/css/destino.css
+++ b/css/destino.css
@@ -241,14 +241,18 @@
   justify-content: center;
   align-items: center;
 }
-.main__presentacion .vsl .video {
+.main__presentacion .vsl iframe {
   box-shadow: 0 0 65px 10px blue;
-  width: 100vw; /* Ancho predeterminado */
-  height: auto; /* Alto predeterminado */
+  width: 900px;
+  height: 550px;
 }
 @media (max-width: 768px) {
   .main__presentacion .main__presentacion {
     max-width: 100vw;
+  }
+  .main__presentacion .vsl iframe {
+    width: 550px;
+    height: 350px;
   }
 }
 @media (max-width: 430px) {
@@ -270,9 +274,6 @@
   }
 }
 @media (max-width: 425px) {
-  .main__presentacion .main__presentacion {
-    width: 100vw;
-  }
   .main__presentacion .main__presentacion .redes {
     width: 15em;
   }
@@ -282,11 +283,9 @@
     width: 3rem;
     height: 3rem;
   }
-  .main__presentacion .main__presentacion .vsl {
-    width: 100vw;
-  }
-  .main__presentacion .main__presentacion .vsl .video {
-    width: 100;
+  .main__presentacion .vsl iframe {
+    width: 350px;
+    height: 200px;
   }
 }
 
