--- a/sass/parciales/_mainPresentacion.scss
+++ b/sass/parciales/_mainPresentacion.scss
@@ -59,16 +59,22 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        .video {
+        iframe {
             box-shadow: 0 0 65px 10px blue;
-            width: 100vw; /* Ancho predeterminado */
-            height: auto; /* Alto predeterminado */
+            width: 900px;
+            height: 550px;
         }
     }
 
 @media (max-width: 768px){
     .main__presentacion{
         max-width: 100vw;
+    }
+    .vsl{
+        iframe{
+            width: 550px;
+            height: 350px;
+        }
     }
 }
 
@@ -93,8 +99,6 @@
 
 @media (max-width: 425px){
     .main__presentacion{
-        width: 100vw;
-        
         .redes{
             width: 15em;
             .redes__item{
@@ -104,13 +108,12 @@
                 height: 3rem;
             }
         }
-        .vsl{
-            width: 100vw;
-            .video{
-                width: 100;
-            }
+    }
+    .vsl{
+        iframe{
+            width: 350px;
+            height: 200px;
         }
-    
     }
 }
 }
